--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-hapi-arch",
-  "version": "0.0.0",
+  "version": "0.1.1",
   "description": "hapi-arch files generators",
   "homepage": "",
   "author": {
@@ -17,23 +17,25 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "coveralls": "^2.13.1",
+    "coveralls": "^2.13.3",
     "eslint": "^4.7.2",
     "eslint-config-xo-space": "^0.16.0",
-    "jest": "^21.0.0",
-    "jest-cli": "^21.0.0",
-    "nsp": "^2.6.3",
-    "yeoman-assert": "^3.0.0",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
+    "nsp": "^2.8.1",
+    "yeoman-assert": "^3.1.0",
     "yeoman-test": "^1.6.0"
   },
   "dependencies": {
     "@bdchauvette/gulp-prettier": "^2.0.0",
     "ast-query": "^2.0.0",
     "chalk": "^1.1.3",
+    "debug": "^3.1.0",
     "gulp-beautify": "^2.0.1",
     "lodash": "^4.17.4",
-    "prettier": "^1.7.0",
-    "yeoman-generator": "^1.0.0",
+    "prettier": "^1.7.2",
+    "yeoman-environment": "^2.0.4",
+    "yeoman-generator": "^1.1.1",
     "yosay": "^2.0.0"
   },
   "jest": {
